--- a/requirements-api.txt
+++ b/requirements-api.txt
@@ -1,7 +1,6 @@
 fastapi==0.115.14
 uvicorn==0.35.0
 pydantic==2.11.7
-pydantic_core==2.33.2
 joblib==1.5.1
-scikit-learn==1.7.0
-numpy==2.3.1
+scikit-learn>=1.5,<1.7
+numpy>=1.21,<2.0
